adn-john-narvaez

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=co.com.ceiba.microservicio
+sonar.projectKey=co.com.ceiba:microservicio.john.narvaez
 sonar.projectName=Ceiba-AgendarCitasMedicas(john.narvaez)
 sonar.projectDesciption=Agendar Citas Medicas
 sonar.projectVersion=1.0
