--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,8 +15,14 @@ sonar.java.binaries=microservicio/build/classes/java/main
 sonar.tests=microservicio/dominio/src/test/java
 sonar.java.test.binaries=microservicio/dominio/build/classes/java/test
 
+sonar.tests=microservicio/infraestructura/src/test/java
+sonar.java.test.binaries=microservicio/infraestructura/build/classes/java/test
+
 #Envío de reportes de la tarea test
 #sonar.coverage.jacoco.xmlReportPaths=microservicio/build/rep#orts/jacoco/test/jacocoTestReport.xml
 sonar.coverage.jacoco.xmlReportPaths=microservicio/dominio/build/test-results/test/*.xml
 sonar.junit.reportPaths=microservicio/dominio/build/test-results/test/
+
+sonar.coverage.jacoco.xmlReportPaths=microservicio/infraestructura/build/test-results/test/*.xml
+sonar.junit.reportPaths=microservicio/infraestructura/build/test-results/test/
 
