--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,25 +4,31 @@ sonar.projectDesciption=Agendar Citas Medicas
 sonar.projectVersion=1.0
 sonar.projectDescription=Proyecto de induccion en Ceiba software
 
-#Datos de Configuración
-sonar.sourceEncoding=UTF-8
+sonar.modules=dominio,infraestructura
 
-#Datos de los fuentes y binarios
-sonar.sources=microservicio/src/main/java
-sonar.java.binaries=microservicio/build/classes/java/main
+dominio.sonar.projectName=Dominio
+dominio.sonar.sources=microservicio/src/main/java
+dominio.java.binaries=build/classes/java/main
+dominio.java.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
+dominio.java.source=1.8
+dominio.tests=src/test/java
+dominio.java.test.binaries=build/classes/java/test
+dominio.java.test.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 
-#Datos de los fuentes y binarios de los tests
-sonar.tests=microservicio/dominio/src/test/java
-sonar.java.test.binaries=microservicio/dominio/build/classes/java/test
+#Envío de reportes de JUnit y Jacoco como resultado de la tarea test
+dominio.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+dominio.junit.reportPaths=build/test-results/test
 
-sonar.tests=microservicio/infraestructura/src/test/java
-sonar.java.test.binaries=microservicio/infraestructura/build/classes/java/test
+infraestructura.sonar.projectName=Infraestructura
+infraestructura.sonar.sources=microservicio/src/main/java
+infraestructura.java.binaries=build/classes/java/main
+infraestructura.java.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
+infraestructura.java.source=1.8
+infraestructura.tests=src/test/java
+infraestructura.java.test.binaries=build/classes/java/test
+infraestructura.java.test.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 
-#Envío de reportes de la tarea test
-#sonar.coverage.jacoco.xmlReportPaths=microservicio/build/rep#orts/jacoco/test/jacocoTestReport.xml
-sonar.coverage.jacoco.xmlReportPaths=microservicio/dominio/build/test-results/test/*.xml
-sonar.junit.reportPaths=microservicio/dominio/build/test-results/test/
-
-sonar.coverage.jacoco.xmlReportPaths=microservicio/infraestructura/build/test-results/test/*.xml
-sonar.junit.reportPaths=microservicio/infraestructura/build/test-results/test/
+#Envío de reportes de JUnit y Jacoco como resultado de la tarea test
+infraestructura.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+infraestructura.junit.reportPaths=build/test-results/test
 
