adn-john-narvaez

--- a/microservicio/sonar-project.properties
+++ b/microservicio/sonar-project.properties
@@ -2,12 +2,11 @@ sonar.projectKey=co.com.ceiba:microservicio.john.narvaez
 sonar.projectName=Ceiba-AgendarCitasMedicas(john.narvaez)
 sonar.projectDesciption=Agendar Citas Medicas
 sonar.projectVersion=1.0
-sonar.projectDescription=Proyecto de induccion en Ceiba software
 
 sonar.modules=dominio,infraestructura
 
 dominio.sonar.projectName=Dominio
-dominio.sonar.sources=microservicio/src/main/java
+dominio.sonar.sources=src/main/java
 dominio.java.binaries=build/classes/java/main
 dominio.java.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 dominio.java.source=1.8
@@ -20,7 +19,7 @@ dominio.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestRepor
 dominio.junit.reportPaths=build/test-results/test
 
 infraestructura.sonar.projectName=Infraestructura
-infraestructura.sonar.sources=microservicio/src/main/java
+infraestructura.sonar.sources=src/main/java
 infraestructura.java.binaries=build/classes/java/main
 infraestructura.java.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 infraestructura.java.source=1.8
