--- a/microservicio/sonar-project.properties
+++ b/microservicio/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.projectDesciption=Agendar Citas Medicas
 sonar.projectVersion=1.0
 sonar.projectDescription=Proyecto ADN Ceiba software
 sonar.modules=dominio,infraestructura
+sonar.sources=.
 
 #Datos de Configuración
 sonar.sourceEncoding=UTF-8
