--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,6 @@ sonar.projectName=Ceiba-AgendarCitasMedicas(john.narvaez)
 sonar.projectDesciption=Agendar Citas Medicas
 sonar.projectVersion=1.0
 sonar.projectDescription=Proyecto de induccion en Ceiba software
-sonar.modules=dominio,infraestructura
 
 #Datos de Configuración
 sonar.sourceEncoding=UTF-8
@@ -13,8 +12,10 @@ sonar.sources=microservicio/src/main/java
 sonar.java.binaries=microservicio/build/classes/java/main
 
 #Datos de los fuentes y binarios de los tests
-dominio.sonar.tests=microservicio/dominio/src/test/java
-dominio.sonar.java.test.binaries=microservicio/dominio/build/classes/java/test
+sonar.tests=microservicio/dominio/src/test/java
+sonar.java.test.binaries=microservicio/dominio/build/classes/java/test
+coverage.jacoco.xmlReportPaths=microservicio/build/reports/jacoco/test/jacocoTestReport.xml
+junit.reportPaths=microservicio/build/test-results/test
 
 sonar.tests=microservicio/infraestructura/src/test/java
 sonar.java.test.binaries=microservicio/infraestructura/build/classes/java/test
